maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: not found: value random2
    random2()
    ^RandomMouseMaze:13: error: not found: value random
    			if(random == 0)
                           ^RandomMouseMaze:17: error: not found: value random
    			if(random == 1)
                           ^